Support multiple containers

--- a/sass/html5-sortable.sass
+++ b/sass/html5-sortable.sass
@@ -1,7 +1,7 @@
 /**
  * Styles specific to the ordering process
  */
-.sortable-ghost
+.sortable-cursor
     position: relative
 
     &:after
@@ -15,7 +15,7 @@
         border: 2px dashed #AAA
 
 tr, td, th
-    &.sortable-ghost
+    &.sortable-cursor
         border: 2px dashed #AAA
         &:after
             display: none
