--- a/sass/html5-sortable.sass
+++ b/sass/html5-sortable.sass
@@ -1,5 +1,10 @@
-/**
- * Styles specific to the ordering process
+/* ----
+ * Html5 Sortable
+ * http://github.com/clippings/html5-sortable
+ * ----
+ * Copyright 2015 Clippings Ltd.
+ * Licensed under BSD (https://github.com/clippings/html5-sortable/blob/master/LICENSE)
+ * ----
  */
 .sortable-cursor
     position: relative
